--- a/Queries/DAC_1_Liste.des.produits.dbquery.ipynb
+++ b/Queries/DAC_1_Liste.des.produits.dbquery.ipynb
@@ -19,9 +19,8 @@
    "outputs": [],
    "source": [
     "SELECT PC.Name AS ProductCategory, P.Name AS ProductNam, P.PRoductNumber, P.listPrice\n",
-    "FROM ProductCategory PC\n",
-    "JOIN Product P\n",
-    "ON PC.ProductCategoryID = P.ProductCategoryID"
+    "FROM saleslt.product AS P\n",
+    "INNER JOIN saleslt.productcategory AS PC ON P.ProductCategoryID = PC.ProductCategoryID"
    ]
   }
  ],
